--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
   <div class="section">
     <div class="label">案件キー <span class="required">必須</span></div>
-    <input type="text" id="ankenKey" class="input-field" placeholder="例：MIT12345-03" autocomplete="off" autocorrect="off" autocapitalize="characters">
+    <input type="text" id="ankenKey" class="input-field" placeholder="例：12345678-03" autocomplete="off" autocorrect="off" autocapitalize="characters">
     <div class="input-hint">案件番号＋ハイフン＋担当者番号</div>
     <div class="input-error" id="ankenError">案件キーの形式が正しくありません</div>
   </div>
