--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
 
 <div class="main" id="mainScreen">
   <div class="guide">
-    <div class="guide-title">🎤 この3つを話してください</div>
+    <div class="guide-title">🎤 この4つを話してください</div>
     <ul class="guide-items">
       <li><span class="num">①</span> 今日どうだった？（契約・検討中・厳しいなど）</li>
       <li><span class="num">②</span> お客さんが気にしてたことは？</li>
-      <li><span class="num">③</span> 次に何をする？</li>
+      <li><span class="num">③</span> 次に何をする？（再訪日・見積修正・店長同行など）</li>
+      <li><span class="num">④</span> お客さん名と地域は？（例：山田様・港区など）</li>
     </ul>
   </div>
 
